[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zaa-async-webscraper"
version = "0.1.0"
description = "Minimal Python async web scraping utility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0",
    "typing-extensions",
]

[project.optional-dependencies]
dev = []
